Added the links to the footer (GitHub and Netlify)

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <h1>World Clock</h1>
 
     <footer>
-      This project was coded by <a href="#">Helena Nogueira</a>, is open-sourced
-      on <a href="#">GitHub</a> and it's hosted on <a href="#">Netlify</a>
+      This project was coded by <a href="https://github.com/lenatnog">Helena Nogueira</a>, is open-sourced
+      on <a href="https://github.com/lenatnog/awesome-world-clock">GitHub</a> and it's hosted on <a href="https://the-awesome-world-clock.netlify.app/">Netlify</a>
     </footer>
     <script src="src/index.js"></script>
   </body>
