Added basic HTML

--- a/index.html
+++ b/index.html
@@ -9,11 +9,36 @@
     <title>Awesome World Clock</title>
   </head>
   <body>
-    <h1>World Clock</h1>
+    <div class="container">
+      <h1>World Clock</h1>
+
+      <select name="" id="">
+        <option value="">select a city</option>
+        <option value="">London</option>
+        <option value="">São Paulo</option>
+        <option value="">New York</option>
+      </select>
+
+      <div class="city">
+        <h2>Los Angeles</h2>
+        <div class="date">August 15th 2022</div>
+        <div class="time">1:48:15 AM</div>
+      </div>
+
+      <div class="city">
+        <h2>Paris</h2>
+        <div class="date">August 15th 2022</div>
+        <div class="time">1:48:15 AM</div>
+      </div>
+    </div>
 
     <footer>
-      This project was coded by <a href="https://github.com/lenatnog">Helena Nogueira</a>, is open-sourced
-      on <a href="https://github.com/lenatnog/awesome-world-clock">GitHub</a> and it's hosted on <a href="https://the-awesome-world-clock.netlify.app/">Netlify</a>
+      This project was coded by
+      <a href="https://github.com/lenatnog">Helena Nogueira</a>, is open-sourced
+      on
+      <a href="https://github.com/lenatnog/awesome-world-clock">GitHub</a> and
+      it's hosted on
+      <a href="https://the-awesome-world-clock.netlify.app/">Netlify</a>
     </footer>
     <script src="src/index.js"></script>
   </body>
