--- a/index.html
+++ b/index.html
@@ -34,11 +34,15 @@
 
     <footer>
       This project was coded by
-      <a href="https://github.com/lenatnog">Helena Nogueira</a>, is open-sourced
-      on
-      <a href="https://github.com/lenatnog/awesome-world-clock">GitHub</a> and
-      it's hosted on
-      <a href="https://the-awesome-world-clock.netlify.app/">Netlify</a>
+      <a href="https://github.com/lenatnog" target="_blank">Helena Nogueira</a>,
+      is open-sourced on
+      <a href="https://github.com/lenatnog/awesome-world-clock" target="_blank"
+        >GitHub</a
+      >
+      and it's hosted on
+      <a href="https://the-awesome-world-clock.netlify.app/" target="_blank"
+        >Netlify</a
+      >
     </footer>
     <script src="src/index.js"></script>
   </body>
