--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
         <option value="">Auckland</option>
       </select>
 
-      <div class="city">
+      <div class="city" id="los-angeles">
         <div>
-          <h2>Los Angeles 🇺🇸</h2>
-          <div class="date">August 15th 2022</div>
+          <h2>Los Angeles</h2>
+          <div class="date"></div>
         </div>
-        <div class="time">1:48:15 <small> AM </small></div>
+        <div class="time"><small></small></div>
       </div>
-      <div class="city">
+      <div class="city" id="paris">
         <div>
-          <h2>Paris 🇫🇷</h2>
-          <div class="date">August 15th 2022</div>
+          <h2>Paris</h2>
+          <div class="date"></div>
         </div>
-        <div class="time">1:48:15 <small> AM </small></div>
+        <div class="time"><small></small></div>
       </div>
     </div>
 
