--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
       <select id="city-input">
         <option value="">Select a city..</option>
+        <option value="current">My current location</option>
         <option value="Europe/London">London</option>
         <option value="America/New_York">New York</option>
         <option value="America/Sao_Paulo">São Paulo</option>
