Updated initial cities

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
         <option value="current">My current location</option>
         <option value="Europe/London">London</option>
         <option value="America/New_York">New York</option>
-        <option value="America/Sao_Paulo">São Paulo</option>
+        <option value="America/Los_Angeles">Los Angeles</option>
         <option value="Europe/Lisbon">Lisbon</option>
       </select>
 
       <div id="cities">
-        <div class="city" id="los-angeles">
+        <div class="city" id="sao-paulo">
           <div>
-            <h2>Los Angeles</h2>
+            <h2>São Paulo</h2>
             <div class="date"></div>
           </div>
           <div class="time"><small></small></div>
