--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <option value="Europe/London">London</option>
         <option value="America/New_York">New York</option>
         <option value="America/Los_Angeles">Los Angeles</option>
-        <option value="Europe/Lisbon">Lisbon</option>
+        <option value="Asia/Tokyo">Tokyo</option>
       </select>
 
       <div id="cities">
@@ -38,6 +38,13 @@
         <div class="city" id="paris">
           <div>
             <h2>Paris</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"><small></small></div>
+        </div>
+        <div class="city" id="lisbon">
+          <div>
+            <h2>Lisbon</h2>
             <div class="date"></div>
           </div>
           <div class="time"><small></small></div>
